openshift/base/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: isitfriday
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: isitifriday
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: isitfriday-frontend
    app.kubernetes.io/managed-by: tekton
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.6
  name: isitfriday
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels: 
      deployment: isitfriday
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: isitfriday
    spec:
      containers:
      - image: 'isitfriday'
        imagePullPolicy: Always
        name: isitfriday
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
