openshift/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: isitfriday
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: isitifriday
    app.kubernetes.io/name: flask
    app.kubernetes.io/instance: isitfriday-frontend
    app.kubernetes.io/managed-by: tekton
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: "3.6"
  name: isitfriday
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: isitfriday
  sessionAffinity: None
  type: ClusterIP
